--- a/index1.css
+++ b/index1.css
@@ -5,38 +5,19 @@ body {
 }
 
 .header {
-    width: 80%;
-    height: 15rem;
+    width: 70%;
+    height: 20rem;
     margin: 0 auto;
     display: flex;
-    background-color: rgba(0, 0, 0, .6);
-    border: 1px solid silver;
+    opacity: .5;
+    border: silver solid 1px;
 }
 
-.logo {
-    height: 100%;
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.header img {
+    width: 100%;
 }
 
-.logo img {
-    height: 85%;
-    width: 72%;
-    opacity: .6;
-}
 
-.header-text {
-    width: 75%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3.6rem;
-    font-family: cursive;
-    color: rgb(205, 86, 86);
-}
 
 .nav {
     width: 70%;
@@ -46,13 +27,14 @@ body {
     margin-top: 2rem;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color:rgba(0, 0, 0, .6);
     border-radius: 25px;
 }
 
 .nav a {
-    width: 20%;
-    height: 100%;
+    width: 15%;
+    height: 70%;
 }
 
 .nav div {
@@ -60,9 +42,15 @@ body {
     height: 100%;
     justify-content: center;
     align-items: center;
-    color: rgb(205, 86, 86);
+    color: rgb(235, 165, 3);
     font-size: 1.5rem;
     letter-spacing: .2rem;
+}
+
+.selected {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 25px;
+    border: 1px silver solid;
 }
 
 .test img {
