--- a/index1.css
+++ b/index1.css
@@ -1,20 +1,30 @@
 body {
     background-image: url('photos/water.jpg');
-    background-size: cover;
+    background-size:contain;
     padding: 2rem;
 }
 
 .header {
-    width: 70%;
+    width: 80%;
     height: 20rem;
     margin: 0 auto;
     display: flex;
-    opacity: .5;
-    border: silver solid 1px;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, .6);
+    animation: pulsate 1.5s infinite alternate;  
+    border: 1px solid #fff;
+    border-radius: 25px;
+    box-shadow: 0 0 .2rem #fff,
+            0 0 .1rem #fff,
+            0 0 .5rem #fea813,
+            0 0 0.4rem #fe9013,
+            0 0 1.3rem #fec713,
+            inset 0 0 1.3rem #fe9813;
 }
 
 .header img {
     width: 100%;
+    border-radius: 25px;
 }
 
 
@@ -58,3 +68,236 @@ body {
     width: 10rem;
     opacity: .5;
 }
+
+
+.container-1 {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.specials {
+    background-color:rgba(0, 0, 0, .4);
+    height: 20rem;
+    width: 40%;
+    display: flex;
+    overflow: auto;
+    overflow-y: hidden;
+    border-left: 1.5px black solid;
+    border-top: 1.5px black solid;
+    border-radius: 25px;
+    box-shadow: 0px 0px 20px 20px black;
+}
+
+.specials::-webkit-scrollbar {
+    width: .8rem;
+    border-radius: 25px;
+}
+
+.specials::-webkit-scrollbar-track {
+    background:rgba(0, 0, 0, .4);
+    border-radius: 25px;
+    margin-top: .7rem;
+    margin-bottom: .7rem;
+    border-top: 1px silver solid;
+    border-bottom: 1px silver solid;
+  }
+
+.specials::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.452);
+    border-radius: 25px;
+    border: 1px rgb(133, 120, 120) solid;
+    height: 1rem;
+  }
+
+.burger {  
+    flex: 0 0 100%;
+
+}
+
+.burger img {
+    height: 100%;
+    width: 100%;
+}
+
+.marg {
+    flex: 0 0 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.marg img {
+    height: 80%;
+    width: 80%;
+}
+
+/* menu nav */
+
+.b-one {
+    border-bottom: 1px silver solid;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: none;
+    font-size: 1.8rem;
+    font-family:Arial, Helvetica, sans-serif;
+    color: silver;
+}
+
+.b-two {
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: none;
+    font-size: 1.6rem;
+    font-family:Arial, Helvetica, sans-serif;
+    color: silver;
+}
+
+.b-three {
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: none;
+    font-size: 1.6rem;
+    font-family:Arial, Helvetica, sans-serif;
+    color: silver;
+}
+
+.b-four {
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: none;
+    font-size: 1.6rem;
+    font-family:Arial, Helvetica, sans-serif;
+    color: silver;
+}
+
+.b-five {
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: none;
+    font-size: 1.6rem;
+    font-family:Arial, Helvetica, sans-serif;
+    color: silver;
+}
+
+.menu-nav {
+    display: flex;
+    width: 65%;
+    margin: 0 auto;
+    height: 7rem;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+
+.menu-nav button:hover {
+    font-size: 1.8rem;
+    transition: 1s;
+}
+
+/* menu reccomendation images */
+
+.rec {
+    margin: 0 auto;
+    margin-top: 2rem;
+    width: 80%;
+    height: 10rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.rec div {
+    width: 30%;
+    height: 100%;
+}
+
+
+
+.rec-one {
+    display: flex;
+}
+
+.rec-one div {
+    display: flex;
+    justify-content: center;
+}
+
+
+.rec-one img {
+    height: 100%;
+    width: 80%;
+}
+
+
+.rec-two {
+    display: none;
+}
+
+.rec-three {
+    display: none;
+}
+
+.rec-four {
+    display: none;
+}
+
+.rec-five {
+    display: none;
+}
+
+/* menu item containers */
+
+.menu-containers {
+    width: 80%;
+    height: 70rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.menu-containers div {
+    width: 15rem;
+    height: 20rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-top: 2rem;
+    box-shadow: 0px 0px 10px 10px black;
+    background-color:rgba(0, 0, 0, .4);
+}
+
+.one {
+    display: flex;
+}
+
+.two {
+    display: none;
+}
+
+.three {
+    display: none;
+}
+
+.four {
+    display: none;
+}
+
+.five {
+    display: none;
+}
+
